# Wren

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMMUNITY.md  CONTRIBUTING.md  CREDITS.md  Development.md  Dockerfile.solo  GETTING_STARTED.md  LICENSE  Makefile  README-WREN.md  README.md  SECURITY.md  config.template.toml  docker-compose.solo.yml  docker-compose.yml  gatekeeper.py  migrate_imports.py  mypy.ini  package-lock.json  package.json  pyproject.toml  run_app_builder.py  run_parallel_agents.py  start-preview.sh  test_cli_e2e.sh
.devcontainer/: README.md  (+1 more)
wren-sdk/: pyproject.toml
wren-sdk/wren/: __init__.py  py.typed
wren-sdk/wren/agent/: __init__.py  agent.py
wren-sdk/wren/agent_server/: __init__.py  env_parser.py  models.py  utils.py
wren-sdk/wren/context/: __init__.py  context.py  prompt.py
wren-sdk/wren/conversation/: __init__.py  conversation.py
wren-sdk/wren/event/: __init__.py  base.py  store.py
wren-sdk/wren/hooks/: __init__.py  hook.py
wren-sdk/wren/llm/: __init__.py  client.py  llm_profile_store.py  message.py
wren-sdk/wren/llm/utils/: __init__.py  verified_models.py
wren-sdk/wren/mcp/: __init__.py  client.py
wren-sdk/wren/security/: __init__.py  security.py
wren-sdk/wren/settings/: __init__.py  settings.py
wren-sdk/wren/skills/: __init__.py  skill.py
wren-sdk/wren/tool/: __init__.py  base.py  guardrail.py  manifest.py  registry.py
wren-sdk/wren/tools/: __init__.py
wren-sdk/wren/utils/: __init__.py  async_utils.py  logging.py  models.py
wren-sdk/wren/workspace/: __init__.py  workspace.py
(+1054 files in other folders)
