[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "wren-sdk"
version = "1.0.0"
description = "Wren SDK — AI software engineer toolkit"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Wren Team" },
]
keywords = ["ai", "agent", "llm", "sdk", "software-engineer"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

dependencies = [
    "pydantic>=2.0,<3.0",
    "litellm>=1.0,<2.0",
    "langgraph-sdk>=0.2.0",
]

[project.optional-dependencies]
mcp = [
    "mcp>=1.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4",
    "mypy>=1.10",
]

[tool.hatch.build.targets.wheel]
packages = ["wren"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
